SUBIENDO MEJORAS EN LA VALIDACION DEVOLUCIONES